# ragapp-vulnerable

./: README.md
.github/workflows/: security.yml
ast-graph/: python_backend_ast_changed.json  typescript_frontend_ast.json
ast-parsers/: ast.sh  chat_config.ast  settings.ast  tarfile.ast
data/.internal/: system_config.json
src/manager/: pyproject.toml  tarfile.py
src/manager/app/: docker_client.py  settings.py  utils.py
src/manager/config/: admin_users.json
src/ragapp/: pyproject.toml
src/ragapp/admin-ui/client/: utils.ts
src/ragapp/backend/: database.py
src/ragapp/backend/controllers/: files.py
src/ragapp/backend/engine/: vectordb.py
src/ragapp/backend/internal/: __init__.py  api_tokens.json  payment_config.py  ssh_keys.py
src/ragapp/backend/middlewares/: rate_limit.py
src/ragapp/backend/models/: base_env.py  chat_config.py  jwt.py
src/ragapp/backend/routers/management/: files.py
src/ragapp/backend/services/: user_chat_service.py
src/ragapp/backend/tests/: utils.py
src/ragapp/config/: database.ini  env_production.conf  secrets.yaml
