[tool.poetry]
name = "ragapp-manager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.65.1"
docker = "^7.1.0"
# pydantic-settings removed - using pydantic.BaseSettings directly for FastAPI 0.65.1 compatibility
python-multipart = "0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
